--- a/css/header.css
+++ b/css/header.css
@@ -1,47 +1,33 @@
 header {
-  height: 100%;
-  position: absolute;
-  z-index: 2;
-  right: 0;
+  position: fixed;
+  width: 100%;
 }
 header .wrap {
-  height: 100vh;
-  flex-direction: column;
+  height: 100px;
   align-items: center;
-  background-color: rgba(0,0,0,0.75);
-  width: 100%;
-  display: grid;
-  grid-template-rows: auto auto 1fr;
-  align-items: flex-end;
-  justify-items: center;
-  gap: 30px;
-  padding: 20px 0;
-  box-sizing: border-box;
 }
 header .wrap h1 {
-  padding-top: 33px;
+  
 }
 header .wrap h1 a {
   font-size: 0;
   display: block;
-  width: 92px;
+  width: 188px;
   height: 33px;
   background-image: url(../img/hd_logo_w.png);
 }
 header .wrap ul.gnb {
-  flex-direction: column;
-  padding: 10px;
+  
 }
 header .wrap ul.gnb li {
   
 }
 header .wrap ul.gnb li a {
   display: block;
-  line-height: 3;
+  line-height: 100px;
   padding: 0 50px;
-  font-size: 23px;
+  font-size: 18px;
   color: white;
-  padding-top: 10px;
 }
 header .wrap .sublist {
   
@@ -68,7 +54,6 @@ header .wrap span.lang {
 header .wrap span.lang a {
   display: block;
   color: white;
-  padding-bottom: 40px;
 }
 header .wrap span.lang a:nth-child(2){
   display: none;
@@ -93,9 +78,7 @@ header .wrap span.lang a::after{
   vertical-align: 2px;
   margin-left: 7px;
 }
-header .wrap ul.gnb li a:hover{
-  color: #f8b421;
-}
+
 
 
 
